🍨 feat: add moment and use window.alert

--- a/packages/hello/src/myfunction.html
+++ b/packages/hello/src/myfunction.html
@@ -27,5 +27,8 @@
 
     <!-- スプレッドシートを作成する -->
     <button onClick="google.script.run.createSS()">Create Spread Sheet</button>
+
+    <!-- now を alert() する -->
+    <button onClick="google.script.run.getNow()">Call getNow()</button>
   </body>
 </html>
